syntax = "proto3";
option go_package = "./pb";

enum UserSubscriptionType {
    USER_SUBSCRIPTION_UNSPECIFIED = 0;
    USER_SUBSCRIPTION_FREE = 1;
    USER_SUBSCRIPTION_PREMIUM = 2;
}

message User {
    UserSubscriptionType subscriptionType = 1;
    string id = 5;

    optional string preferredNickname = 2;
    optional string email = 3;
    optional string username = 4;
    optional string firstName = 6;
    optional string lastName = 7;
}